2:34 fix unvisible bug for each section

--- a/fracking/css/fracking.css
+++ b/fracking/css/fracking.css
@@ -243,11 +243,12 @@ div#container {
 
 /* Fake height for now */
 .section {
-	height: 20%;
+	padding-top: 52px;
 }
 
 #section-1 {
 	margin-top: 54px;
+	padding-top: 0;
 }
 
 div.video-cover {
